# source/controllers/expenses.ts
@@ -1,6 +1,5 @@
 /** source/controllers/expenses.ts */
 import { Request, Response, NextFunction } from 'express';
-import { EnumType } from 'typescript';
 import { collections } from "../db/database";
 import { ObjectId } from "mongodb";
 
@@ -8,11 +7,15 @@ interface Expense {
     expenseId: Number;
     description: String;
     value: Number;
-    type: EnumType;
+    type: String;
 }
 
 // getting all expenses
 const getExpenses = async (req: Request, res: Response, next: NextFunction) => {
+    // #swagger.method = 'get'
+    // #swagger.tags = ['Expense']
+    // #swagger.description = 'get all Expenses.'
+    // #swagger.produces = ["application/json"]
     try {
         // get some expenses
         const expenses = await collections.expenses?.find<Expense>({}).toArray();
@@ -28,7 +31,11 @@ const getExpenses = async (req: Request, res: Response, next: NextFunction) => {
 
 // getting a single expense
 const getExpense = async (req: Request, res: Response, next: NextFunction) => {
-     // #swagger.parameters['id'] = { description: 'ID of Expense' }
+    // #swagger.method = 'get'
+    // #swagger.tags = ['Expense']
+    // #swagger.description = 'Get Expense by id.'
+    // #swagger.parameters['id'] = { description: 'ID of Expense' }
+    // #swagger.produces = ["application/json"]
     try {
         // get the expense id from the req
         let id: string = req.params.id;
@@ -47,6 +54,16 @@ const getExpense = async (req: Request, res: Response, next: NextFunction) => {
 
 // updating a expense
 const updateExpense = async (req: Request, res: Response, next: NextFunction) => {
+    // #swagger.method = 'put'
+    // #swagger.tags = ['Expense']
+    // #swagger.description = 'Get Expense by id.'
+    // #swagger.parameters['id'] = { description: 'ID of Expense' }
+    // #swagger.produces = ["application/json"]
+    /* #swagger.parameters['obj'] = { 
+       in: 'body',
+       description: 'Object of type Expense',
+       schema: { $ref: "#/definitions/Expense" }
+        } */
     try {
         // get the expense id from the req.params
         const query = { _id: new ObjectId(req.params.id) };
@@ -65,6 +82,10 @@ const updateExpense = async (req: Request, res: Response, next: NextFunction) =>
 
 // deleting a expense
 const deleteExpense = async (req: Request, res: Response, next: NextFunction) => {
+    // #swagger.method = 'delete'
+    // #swagger.tags = ['Expense']
+    // #swagger.description = 'Delete Expense by id.'
+    // #swagger.produces = ["application/json"]
     try {
         // get the expense id from req.params
         let id: string = req.params.id;
@@ -73,11 +94,11 @@ const deleteExpense = async (req: Request, res: Response, next: NextFunction) =>
         const result = await collections.expenses?.deleteOne(query);
 
         if (result && result.deletedCount) {
-            res.status(202).send(`Successfully removed expense with id ${id}`);
+            return res.status(202).send(`Successfully removed expense with id ${id}`);
         } else if (!result) {
-            res.status(400).send(`Failed to remove expense with id ${id}`);
+            return res.status(400).send(`Failed to remove expense with id ${id}`);
         } else if (!result.deletedCount) {
-            res.status(404).send(`Expense with id ${id} does not exist`);
+            return res.status(404).send(`Expense with id ${id} does not exist`);
         }
         // return response
         return res.status(200).json({
@@ -91,6 +112,15 @@ const deleteExpense = async (req: Request, res: Response, next: NextFunction) =>
 
 // adding a expense
 const addExpense = async (req: Request, res: Response, next: NextFunction) => {
+    // #swagger.method = 'post'
+    // #swagger.tags = ['Expense']
+    // #swagger.description = 'Add new Expense.'
+    // #swagger.produces = ["application/json"]
+    /* #swagger.parameters['obj'] = { 
+       in: 'body',
+       description: 'Object of type Expense',
+       schema: { $ref: "#/definitions/Expense" }
+        } */
     try {
         // get the data from req.body
         const newExpense = req.body as Expense;
